<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginTop="20dp"
        android:textSize="28sp"
        android:fontFamily="@font/halisgr_regular"
        android:textStyle="bold"
        android:textColor="@color/blue_sky"/>
    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textColor="@color/blue_grey"
        android:text="@string/aboutApp1"/>
    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/tv_openweatherURL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/openweatherURL"
        android:textColor="@color/blue_sky"/>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blue_grey"
        android:text="@string/aboutApp2"/>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_grey"
            android:text="@string/email"/>
        <TextView
            android:id="@+id/tv_developerEmail"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_sky"
            android:text="@string/developerEmail"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_grey"
            android:text="@string/phone"/>
        <TextView
            android:id="@+id/tv_developerPhone"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_sky"
            android:text="@string/developerPhone"/>
    </LinearLayout>
</LinearLayout>